# Distributed-Storage-Mail

./: .gitignore  README.md  a.out  servers.config
Cmake/: common.cmake
Config/: serverlist.txt
Database/cluster1/node1/: tablet1.txt
HTTP Server/: CMakeLists.txt  Makefile  api_handler.cpp  api_handler.hpp  json_example.cpp  kvstore_client.hpp  load_balancer.cpp  local_kvstore.hpp  local_test.cpp  mail_service.cpp  mail_service.hpp  server.cpp  server.hpp  socket_reader.cpp  socket_reader.hpp
HTTP Server/React/build1/: asset-manifest.json  index.html
HTTP Server/React/build1/static/css/: main.e028c8c5.css  main.e028c8c5.css.map
HTTP Server/React/build1/static/js/: 787.9ed45c94.chunk.js.map  main.71225872.js  main.71225872.js.map  main.d9da875d.js  main.d9da875d.js.map  main.eaee4ee8.js  main.eaee4ee8.js.map  main.fbdf547a.js  main.fbdf547a.js.map
HTTP Server/react/: asset-manifest.json  index.html
HTTP Server/react/static/js/: main.3ce59e6a.js  main.3ce59e6a.js.map  main.8f3d59c3.js  main.8f3d59c3.js.map  main.945a0d55.js.map  main.96f0c643.js  main.96f0c643.js.map  main.dd542522.js  main.dd542522.js.map
KVStore/: CMakeLists.txt  Makefile  READNE.md  common.h  console.cc  kv_store.grpc.pb.cc  kv_store.grpc.pb.h  kv_store.pb.cc  kv_store.pb.h  kv_store_client_example.cc  kv_store_server.cc  kv_store_server.h  kvstore-test.cc  kvstore.cc  kvstore.grpc.pb.cc  kvstore.grpc.pb.h  kvstore.h  kvstore.pb.cc  kvstore.pb.h  kvstore_client.cc  kvstore_client.h  kvstore_console.cc  kvstore_console.h  kvstore_master.cc  kvstore_master.h  kvstore_node.cc  kvstore_node.h  kvstore_node_utils.cc  kvstore_node_utils.h  kvstore_test_client.cc
Protos/: kvstore.proto
kv_store/: CMakeLists.txt  Makefile  common.h  kv_store_client_example.cc  kv_store_server.cc  kv_store_server.h
protos/: kv_store.proto
resource/: project.txt
